--- a/pages/components/Menu/Menu.module.css
+++ b/pages/components/Menu/Menu.module.css
@@ -10,9 +10,51 @@
 .menu a{
     color: var(--grey-700);
     font-weight: 500;
+    position: relative;
 }
 
 .menu a:hover {
     color: var(--grey900);
     transition: 0.25s;
+}
+
+.menu a::before {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 4px;
+    width: 0px;
+    height: 2px;
+    background-color: var(--grey-700);
+    transition: all 0.45s;    
+}
+
+.menu a:hover::before {
+    width: 90%;
+    transform: scaleX(1.1);
+    background-color: var(--grey-900);
+}
+
+@media (max-width: 991.98px) {
+    .menu ul {
+        position: absolute;
+        top: 64px;
+        left: 0px ;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        background-color: var(--grey-50);
+        padding: 16px;
+    }
+
+    .menu li {
+        height: 40px;
+        display: flex;
+        align-items: center;
+        margin: 0;
+    }
+
+    
+
 }
