--- a/pages/components/Menu/Menu.module.css
+++ b/pages/components/Menu/Menu.module.css
@@ -1,4 +1,4 @@
-.menu ul {
+.menu {
     list-style-type: none;
 }
 
@@ -36,7 +36,7 @@
 }
 
 @media (max-width: 991.98px) {
-    .menu ul {
+    .menu {
         position: absolute;
         top: 64px;
         left: 0px ;
@@ -54,7 +54,4 @@
         align-items: center;
         margin: 0;
     }
-
-    
-
 }
