--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,5 @@
 :root {
+    /* colors */
     --white: #fff;
     --brown: #180000;
 
@@ -10,6 +11,19 @@
     --red-700: #fe0002;
     --red-800: #960000;
     --red-900: #500001;
+    
+    /* font size */
+    --fs-xl: 3rem;
+    --fs-l: 2rem;
+    --fs-600: 1.5rem;
+    --fs-500: 1.25rem;
+    --fs-400: 1rem;
+
+    /* screen size */
+    --ss-xl: 87.5rem;  
+    --ss-l: 75rem;
+    --ss-md: 62rem;
+    --ss-sm: 36rem;
 }
 
 * {
