--- a/pages/components/Header/Header.module.scss
+++ b/pages/components/Header/Header.module.scss
@@ -3,8 +3,8 @@
     justify-content: space-between;
     align-items: center;
     background-color: var(--white);
-    height: 64px;
-    margin: 0 32px;
+    height: 4rem;
+    margin: 0 3rem;
 }
 
 .header img {
@@ -12,7 +12,15 @@
     height: auto;
 }
 
+.menuToggler {
+    display: none;
+}
+
 @media (max-width: 991.98px) {
+
+    .noDisplay {
+        display: none;
+    }
 
     .menuToggler {
         display: block;
