--- a/pages/components/Menu/Menu.module.css
+++ b/pages/components/Menu/Menu.module.css
@@ -42,7 +42,7 @@
         top: 64px;
         left: 0px ;
         width: 100%;
-        height: 100%;
+        height: calc(100vh - 64px);
         display: flex;
         flex-direction: column;
         background-color: var(--grey-50);
