adding social icons

--- a/pages/components/Hero/Hero.module.css
+++ b/pages/components/Hero/Hero.module.css
@@ -7,6 +7,11 @@
     align-items: center;
     color: var(--white);
 }
+
+.hero .wrapper {
+    width: 75%;
+}
+
 .hero h1 {
     font-size: var(--fs-xl);
     font-weight: 400;
@@ -43,6 +48,11 @@
     font-weight: 700;
     height: 100%;
     animation: spinWords 10s infinite;
+}
+
+.socialWrapper {
+    margin-top: 3rem;
+    display: flex;
 }
 
 @keyframes spinWords {
@@ -108,5 +118,9 @@
         width: 100%;
         text-align: center;
         padding-left: 0;
+    }
+
+    .socialWrapper {
+        justify-content: center;
     }
 }
