--- a/pages/components/Hero/Hero.module.css
+++ b/pages/components/Hero/Hero.module.css
@@ -107,14 +107,20 @@
         height: 40px;
     }
 
+    .hero h1 {
+        font-size: var(--fs-l);
+    }
+
     .textWrapper h3 {
         margin-bottom: 0.5rem;
+        font-size: var(--fs-500);
     }
 
     .textWrapper .rotatingText span{
         width: 100%;
         text-align: center;
         padding-left: 0;
+        font-size: var(--fs-500);
     }
 
     .socialWrapper {
