--- a/pages/components/Button/Button.module.css
+++ b/pages/components/Button/Button.module.css
@@ -1,25 +1,15 @@
-.btnHeader {
-    background-color: var(--red-700);
-    color: #fff;
-    border: none;
-    border-radius: 10px;
-    padding: 0.75rem 2.625rem;
-    font-weight: 500;
+.btn {
     cursor: pointer;
     transition: all 0.2s ease-in-out;
-    border: 2px solid var(--white);
     z-index: 101;
 }
 
-.btnHeader:hover {
-    background-color: var(--white);
-    border: 2px solid var(--red-700);
-    color: var(--red-700);
+.btn:hover {
     transition: all 0.2s ease-in-out;
 }
 
 @media (max-width: 991.98px) {
-    .btnHeader {
+    .btn {
         position: absolute;
         top: 320px;
         left: 0;
