--- a/pages/components/Header/Header.module.scss
+++ b/pages/components/Header/Header.module.scss
@@ -22,6 +22,32 @@
         display: none;
     }
 
+    .menuToggled ul {
+        position: absolute;
+        top: 64px;
+        left: 0px ;
+        width: 100%;
+        height: calc(100vh - 64px);
+        display: flex;
+        flex-direction: column;
+        background-color: var(--grey-50);
+        padding: 1rem;
+    }
+
+    .menuToggled li {
+        height: 40px;
+        display: flex;
+        align-items: flex-start;
+    }
+
+    .btnToggled button{
+        position: absolute;
+        top: 320px;
+        left: 1rem;
+        width: calc(100% - 2rem);
+        padding: 1rem;
+    }
+
     .menuToggler {
         display: block;
         width: 24px;
