--- a/pages/components/Hero/Hero.module.css
+++ b/pages/components/Hero/Hero.module.css
@@ -1,6 +1,7 @@
 .hero {
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../public/heroBackground.jpg);
     width: 100vw;
+    background-position-x: center;
     height: calc(100vh - 64px);
     padding: 0 20%;
     display: flex;
@@ -29,14 +30,11 @@
     color: var(--red-700)
 }
 
-.wrapper {
-    width: 75%;
-}
-
 .textWrapper{
     box-sizing: content-box;
     display: flex;
     height: 40px;
+    margin-bottom: 4rem;
 }
 
 .rotatingText {
@@ -55,8 +53,44 @@
 }
 
 .socialWrapper {
-    margin-top: 3rem;
+    margin-top: 2rem;
     display: flex;
+}
+
+/* Arrow */
+.arrowWrapper {
+    position: absolute;
+    bottom: 1rem;
+    width: 200px;
+    left: calc( 50vw - 100px);
+    text-align: center;
+}
+
+.arrowText {
+    font-size: var(--fs-300);
+}
+
+.arrow {
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.bounce {
+    -moz-animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-0.75rem);
+    }
+    60%{
+        transform: translateY(-0.5rem);
+    }
 }
 
 @keyframes spinWords {
@@ -122,7 +156,6 @@
         padding-left: 0;
         font-size: var(--fs-500);
     }
-
     .socialWrapper {
         justify-content: center;
     }
