--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,7 @@
     --fs-600: 1.5rem;
     --fs-500: 1.25rem;
     --fs-400: 1rem;
+    --fs-300: 0.75rem;
 
     /* screen size */
     --ss-xl: 87.5rem;  
