--- a/pages/components/Hero/Hero.module.css
+++ b/pages/components/Hero/Hero.module.css
@@ -1,4 +1,5 @@
 .hero {
+    position: relative;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../public/heroBackground.jpg);
     width: 100vw;
     background-position-x: center;
@@ -70,7 +71,9 @@
     position: absolute;
     bottom: 1rem;
     width: 200px;
-    left: calc( 50% - 100px);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     text-align: center;
 }
 
