--- a/pages/components/Hero/Hero.module.css
+++ b/pages/components/Hero/Hero.module.css
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../public/heroBackground.jpg);
-    width: 100vw;
+    width: 100%;
     background-position-x: center;
     height: calc(100vh - 64px);
     padding: 0 20%;
