feat: adding budget and work with us forms

--- a/pages/components/Contato/Contact.module.css
+++ b/pages/components/Contato/Contact.module.css
@@ -6,10 +6,7 @@
     align-items: center;
     height: 80vh;
     padding: var(--padding);
-}
-
-.contact :first-child {
-    padding-right: 2rem;
+    gap: 4rem;
 }
 
 .contact .contactColumn {
