--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,7 @@
     --grey-700: #5f6368;
     --grey-900: #212529;
 
+    --red-200: #eb5861;
     --red-400: #e23b45;
     --red-700: #fe0002;
     --red-800: #960000;
