--- a/pages/components/TextArea/TextArea.module.css
+++ b/pages/components/TextArea/TextArea.module.css
@@ -1,4 +1,4 @@
-.select select {
+.textArea textarea {
     background-color: var(--grey-50);
     border: 1px solid var(--grey-50);
     border-radius: .5rem;
@@ -6,18 +6,16 @@
     margin: .5rem 0 1rem;
     font-size: .9rem;
     transition: 0.5s ease;
+    resize: none;
+    width: 100%;
+    height: 8rem;
 }
 
-.select select:focus {
+.textArea textarea:focus {
     outline: none !important;
     border: 1px solid var(--red-200);
 }
 
-.select select:invalid {
-    color: gray;
-}
-
-
-  .req {
+.req {
     color: var(--red-700);
 } 
