--- a/pages/components/Hero/Hero.module.css
+++ b/pages/components/Hero/Hero.module.css
@@ -131,6 +131,12 @@
     }
 }
 
+@media (max-height: 600px) {
+    .hero {
+        height: 600px;
+    }
+}
+
 @media (max-width: 1199.98px) {
     
 }
