--- a/pages/components/Footer/Footer.module.css
+++ b/pages/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     background-color: var(--red-400);
     color: var(--white);
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     flex-direction: column;
     align-items: center;
     padding: 2rem 6rem;
