--- a/components/Empresa/Company.module.css
+++ b/components/Empresa/Company.module.css
@@ -22,15 +22,15 @@
 }
 
 .companyAbout1 {
-    background-image: linear-gradient(rgba(226, 59, 69, 0.25), rgba(226, 59, 69, 1)), url(../../../public/aboutBackground1.jpg);
+    background-image: linear-gradient(rgba(226, 59, 69, 0.25), rgba(226, 59, 69, 1)), url(../../public/aboutBackground1.jpg);
 }
 
 .companyAbout2 {
-    background-image: linear-gradient(rgba(226, 59, 69, 0.25), rgba(226, 59, 69, 1)), url(../../../public/aboutBackground2.jpg);
+    background-image: linear-gradient(rgba(226, 59, 69, 0.25), rgba(226, 59, 69, 1)), url(../../public/aboutBackground2.jpg);
 }
 
 .companyAbout3 {
-    background-image: linear-gradient(rgba(226, 59, 69, 0.25), rgba(226, 59, 69, 1)), url(../../../public/aboutBackground3.jpg);
+    background-image: linear-gradient(rgba(226, 59, 69, 0.25), rgba(226, 59, 69, 1)), url(../../public/aboutBackground3.jpg);
 }
 
 @media (max-width: 1199.98px) {
@@ -52,15 +52,15 @@
     }
 
     .companyAbout1 {
-        background-image: linear-gradient(rgba(226, 59, 69, 0.25), rgba(226, 59, 69, 0.5)), url(../../../public/aboutBackground1.jpg);
+        background-image: linear-gradient(rgba(226, 59, 69, 0.25), rgba(226, 59, 69, 0.5)), url(../../public/aboutBackground1.jpg);
     }
     
     .companyAbout2 {
-        background-image: linear-gradient(rgba(226, 59, 69, 0.5), rgba(226, 59, 69, 0.74)), url(../../../public/aboutBackground2.jpg);
+        background-image: linear-gradient(rgba(226, 59, 69, 0.5), rgba(226, 59, 69, 0.74)), url(../../public/aboutBackground2.jpg);
     }
     
     .companyAbout3 {
-        background-image: linear-gradient(rgba(226, 59, 69, 0.75), rgba(226, 59, 69, 1)), url(../../../public/aboutBackground3.jpg);    }
+        background-image: linear-gradient(rgba(226, 59, 69, 0.75), rgba(226, 59, 69, 1)), url(../../public/aboutBackground3.jpg);    }
 }
 
 @media (max-width: 575.89px) {
