--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -1,6 +1,6 @@
 .hero {
     position: relative;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../public/heroBackground.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../public/heroBackground.jpg);
     width: 100%;
     background-position-x: center;
     height: calc(100vh - 64px);
