--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -3,7 +3,7 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../public/heroBackground.jpg);
     width: 100%;
     background-position-x: center;
-    height: calc(100vh - 64px);
+    height: calc(100svh - 64px);
     padding: 0 20%;
     display: flex;
     align-items: center;
