--- a/components/Servicos/Services.module.css
+++ b/components/Servicos/Services.module.css
@@ -1,58 +1,72 @@
 .services {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--red-400);
-    color: var(--grey-900);
-    padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--red-400);
+  color: var(--grey-900);
+  padding: 2rem;
 }
 
 .services .servicesContainer {
-    background-color: var(--white);
-    width: 100%;
-    height: 100%;
-    padding: 4rem 8rem;
-    border-radius: 72px;
-    display: flex;
-    justify-content: space-around;
+  background-color: var(--white);
+  width: 100%;
+  height: 100%;
+  padding: 4rem 8rem;
+  border-radius: 72px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .services .servicesContainer h2.servicesTitle {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
+}
+
+.servicesWrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  max-width: 1400px;
 }
 
 .services .servicesContainer .servicesItens,
 .services .servicesContainer .servicesImage {
-    width: 50%;
+  width: 50%;
 }
 
 .services .servicesContainer .servicesImage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 991.98px) {
-    .services .servicesContainer {
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: space-between;
-        padding: 2rem;
-    }
+  .services .servicesContainer {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+  }
 
-    .services .servicesContainer .servicesItens,
-    .services .servicesContainer .servicesImage {
-        width: 100%;
-    }
+  .servicesWrapper {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .services .servicesContainer .servicesItens,
+  .services .servicesContainer .servicesImage {
+    width: 100%;
+  }
 }
 
 @media (max-width: 575.98px) {
-    .services {
-        padding: 1rem;
-    }
+  .services {
+    padding: 1rem;
+  }
 
-    .services .servicesContainer {
-        padding: 2rem;
-        border-radius: 36px;
-    }
+  .services .servicesContainer {
+    padding: 2rem;
+    border-radius: 36px;
+  }
 }
